--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ fire = "^0.4.0"
 pandas = "^1.4.3"
 pytesseract = "^0.3.9"
 opencv-python = "^4.6.0"
+python-doctr = {extras = ["torch"], version = "^0.5.1"}
+pypdfium2 = "1.0.0"
 
 
 
